<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:contentInsetLeft="0dp"
            android:contentInsetStart="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            android:contentInsetRight="0dp"
            android:contentInsetEnd="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetEnd="0dp"
            android:layout_height="match_parent" >
            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/employee_salary"
                android:layout_height="wrap_content" />
        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        tools:layout_editor_absoluteX="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_baseline_account_circle_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="سبتمبر,2019"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintHorizontal_bias="0.516"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/employee_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:ellipsize="end"
                android:singleLine="true"
                tools:text="محمد عزب محمد"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/employee_title"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/employee_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:ellipsize="end"
                android:singleLine="true"
                tools:text="طبيب اختصاصي مسالك بولية"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/net_salary"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/employee_name" />

            <TextView
                android:id="@+id/net_salary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/red"
                tools:text="اجمالي الراتب:-347.20 جـ"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/employee_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.35" />


            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pie"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:layout_editor_absoluteX="17dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginVertical="8dp"
                android:background="@color/gray"
                app:layout_constraintBottom_toTopOf="@+id/total"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/total" />

            <View
                android:id="@+id/view"
                android:layout_width="16dp"
                android:layout_height="0dp"
                android:layout_marginEnd="6dp"
                android:background="@color/green"
                app:layout_constraintBottom_toBottomOf="@+id/guideline3"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                tools:text="-337 اجمالي الراتب"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/view" />

            <TableLayout
                android:id="@+id/table_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/table_bg"
                android:divider="@drawable/divider"
                android:dividerPadding="5dp"
                android:orientation="horizontal"
                android:padding="6dp"
                android:showDividers="middle"
                android:stretchColumns="*"
                android:weightSum="3"
                app:layout_constraintTop_toTopOf="@+id/guideline3"
                tools:layout_editor_absoluteX="16dp">

                <TableRow
                    android:divider="@drawable/divider"
                    android:dividerPadding="5dp"
                    android:showDividers="middle">

                    <TextView
                        android:background="@color/blue"
                        android:padding="8dp"
                        android:text="@string/value"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        style="@style/tableView_textStyle"
                        android:layout_height="match_parent"
                        android:background="@color/blue"
                        android:text="@string/clause"
                        android:textColor="@color/white" />

                    <TextView
                        style="@style/tableView_textStyle"
                        android:background="@color/blue"
                        android:text="@string/n"
                        android:textColor="@color/white" />
                </TableRow>
            </TableLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>